fixes ui problems on small devices

--- a/resources/assets/less/ve/app.less
+++ b/resources/assets/less/ve/app.less
@@ -25,7 +25,6 @@ footer.navbar {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 24px;
   min-height: 24px;
 
   .footer {
